# lyrics_generator

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-22-lyrics-creator.md
docs/superpowers/specs/: 2026-06-22-lyrics-creator-design.md
lyrics_creator/: __init__.py  cli.py  discovery.py  transcriber.py
tests/: test_cli.py  test_discovery.py  test_smoke.py  test_transcriber.py
